feat: Actualizar traducciones en español para mejorar la claridad y precisión del contenido

--- a/translations/es.json
+++ b/translations/es.json
@@ -11,7 +11,7 @@
   "add": "Agregar",
   "addCase": "Agregar caso",
   "addData": "Agregar datos",
-  "additionalNotes": "Any additional notes",
+  "additionalNotes": "Notas adicionales",
   "additionalServices": "Pediatría y Servicios Adicionales",
   "addPNSContact": "Agregar contacto de pareja",
   "addRelationship": "Agregar relación",
@@ -21,11 +21,11 @@
   "admittingDoctor": "Médico responsable de la admisión",
   "adverseReactionRecord": "Registro de reacciones adversas",
   "adverseReactions": "Reacciones Adversas",
-  "affection": "Does the child receive affection?",
+  "affection": "¿El niño recibe afecto?",
   "affectiveBond": "Vínculo afectivo",
   "age": "Edad",
   "ageGroupDetails": "Detalles del grupo de edad",
-  "agreements": "Agreements and Commitments",
+  "agreements": "Acuerdos y compromisos",
   "alcoholUse": "Uso de alcohol",
   "alcoholUseDuration": "Duración del consumo de alcohol",
   "alive": "Vivo",
@@ -50,12 +50,12 @@
   "appointmentToFulfill": "Seleccione la cita a atender",
   "appointmentType": "Tipo de cita",
   "AtencionesPuerperio": "Atenciones puerperio",
-  "attendedBy": "Attended By",
+  "attendedBy": "Atendido por",
   "babyGivenVitaminD": "Vitamina D administrada al bebé",
   "balanceOverview": "Balance de líquidos",
   "baselineHivStatus": "Estado basal del VIH",
-  "baselineInformation": "Baseline Information",
-  "baselineStatus": "HIV Status",
+  "baselineInformation": "Información basal",
+  "baselineStatus": "Estado basal del VIH",
   "bilingual": "Bilingüe (Español/Quechua)",
   "biometrics_lower": "Biometría",
   "birthInjuriesTrauma": "Lesiones o traumas al nacer",
@@ -64,15 +64,15 @@
   "birthTypes": "Tipos de Parto",
   "bloodGroup": "Grupo sanguíneo",
   "bloodLoss": "Pérdida de sangre",
-  "bloodPressure": "Blood Pressure (mmHg)",
+  "bloodPressure": "Presión arterial (mmHg)",
   "bloodTransfusion": "Transfusión de sangre",
   "bodyPosition": "Posición corporal",
   "bodyTemperature": "Temperatura corporal",
   "breastfeedingCounseling": "Consejeria de Lactancia Materna",
   "cancel": "Cancelar",
-  "cannotDrink": "Cannot drink or breastfeed",
+  "cannotDrink": "No puede beber o amamantar",
   "caracteristicaLoquios": "Característica de Loquios",
-  "caregiver": "Who takes care of the child?",
+  "caregiver": "¿Quién cuida al niño?",
   "caseEncounter": "Encuentros de gestión de casos",
   "caseManagementFormTitle": "Formulario de Seguimiento de Pacientes",
   "caseManagemet": "Gestión de casos",
@@ -85,7 +85,7 @@
   "chartView": "Vista de la tabla",
   "checkFilters": "Verifique los filtros seleccionados",
   "checkForErrors": "Por favor revise el formulario e intente nuevamente",
-  "checkForValidity": "Some of the values entered may be invalid",
+  "checkForValidity": "Algunos valores ingresados pueden ser inválidos",
   "chestCircumference": "Perímetro torácico",
   "childImmunizationSchedule": "Esquema de Vacunación Infantil",
   "chronicDisease": "Enfermedad crónica",
@@ -93,20 +93,20 @@
   "clientEligibility": "Elegibilidad del paciente",
   "clinicalEncounter": "Encuentro clínico",
   "clinicalStatus": "Estado clínico",
-  "clinicalStatusRequired": "A clinical status is required",
+  "clinicalStatusRequired": "Se requiere un estado clínico",
   "clinicalViews": "Vistas clínicas",
   "completed": "Completado",
   "condition": "Condición",
   "conditionNowVisible": "Ahora es visible en la página de condiciones",
-  "conditionRequired": "A condition is required",
+  "conditionRequired": "Se requiere una condición",
   "conditions": "Condiciones",
   "conditionSaved": "Condición guardada",
   "conditionUpdated": "Condición actualizada",
-  "consultationDate": "Consultation Date",
-  "consultationDetails": "Consultation Details",
-  "consultationReason": "Reason for Consultation",
-  "consultationSaved": "Consultation Saved",
-  "consultationTime": "Consultation Time",
+  "consultationDate": "Fecha de consulta",
+  "consultationDetails": "Detalles de la consulta",
+  "consultationReason": "Motivo de consulta",
+  "consultationSaved": "Consulta guardada",
+  "consultationTime": "Hora de consulta",
   "contact": "Contacto",
   "contactCreated": "Contacto creado",
   "contacted": "Contactado",
@@ -124,10 +124,10 @@
   "culturalNotesPlaceholder": "Observaciones sobre factores culturales, familiares o del entorno que puedan influir en el desarrollo...",
   "currentPregnancy": "Embarazo Actual",
   "customViews": "En esta sección, encontrará vistas clínicas personalizadas adaptadas a las condiciones de los pacientes y los programas de atención inscrita.",
-  "dangerSigns": "Danger Signs",
+  "dangerSigns": "Signos de peligro",
   "dataDisplayed": "Datos mostrados",
-  "dataNowAvailable": "They are now visible on the Perinatal Register",
-  "dataSaved": "Data has been saved successfully.",
+  "dataNowAvailable": "Ahora son visibles en el Registro Perinatal",
+  "dataSaved": "Los datos se han guardado exitosamente.",
   "dataTable": "Tabla de datos",
   "dataTabs": "Pestañas de selección de datos",
   "date": "Programada de fecha",
@@ -141,7 +141,7 @@
   "delete": "Borrar",
   "deliveryOrAbortion": "Partos y Abortos",
   "deliveryType": "Tipo de parto",
-  "demographics": "Demographics",
+  "demographics": "Datos demográficos",
   "department": "Departamento",
   "desarrolloCognitivo": "Desarrollo Cognitivo",
   "desarrolloLenguaje": "Desarrollo del Lenguaje",
@@ -150,7 +150,7 @@
   "descentOfHead": "Descenso de la presentación",
   "descriptionRequired": "Se requiere una descripción",
   "detailedBreakdown": "Desglose Detallado",
-  "diagnoses": "Diagnoses",
+  "diagnoses": "Diagnósticos",
   "Diagnóstico": "Diagnóstico",
   "diastolic": "Diastólico",
   "diastolicBP": "Presión diastólica (mmHg)",
@@ -179,11 +179,11 @@
   "endRelationship": "Finalizar relación",
   "enterCondition": "Ingrese la condición",
   "error": "Error",
-  "errorCreatingCondition": "Error creating condition",
-  "errorLoadingData": "Error loading data",
+  "errorCreatingCondition": "Error al crear condición",
+  "errorLoadingData": "Error al cargar datos",
   "errorLoadingPatient": "Error al cargar los datos del paciente",
   "errorState": "Error al cargar la leyenda",
-  "errorUpdatingCondition": "Error updating condition",
+  "errorUpdatingCondition": "Error al actualizar condición",
   "esophagus": "Esófago permeable",
   "EstadoAdministraciónVitaminaA": "Estado de administración de vitamina A",
   "EstadoGeneral": "Estado General",
@@ -194,10 +194,10 @@
   "examenFísicoTórax": "Examen físico de tórax",
   "ExamenGenitalesExternos": "Examen de genitales externos",
   "failedDeleting": "No se pudo eliminar",
-  "failedSavingRelationship": "Relationship could not be saved",
+  "failedSavingRelationship": "No se pudo guardar la relación",
   "familyContacts": "Contactos familiares",
   "familyRelationshipFormTitle": "Agregar contacto familiar",
-  "fatherInvolvement": "Does the father participate in care?",
+  "fatherInvolvement": "¿El padre participa en el cuidado?",
   "fechaYHoraAtencion": "Fecha y hora de atención",
   "feedingOrders": "Órdenes de alimentación",
   "feedingTime": "Tiempo que el Bebé Mamó (min)",
@@ -218,8 +218,8 @@
   "followUpDate": "Fecha de seguimiento",
   "fontanelle": "Fontanela",
   "fontanelleOther": "Otras observaciones sobre fontanela",
-  "formInvalidFields": "Please review the following fields:",
-  "formTitle": "Fill in the form details",
+  "formInvalidFields": "Por favor revise los siguientes campos:",
+  "formTitle": "Complete los detalles del formulario",
   "frecuenciaCardiaca": "Frecuencia cardíaca",
   "frecuenciaCardiacaFetal": "Frecuencia cardíaca fetal (por min.)",
   "gastricLavage": "Lavado gástrico",
@@ -231,8 +231,8 @@
   "gestationalAge": "Edad gestacional (semanas)",
   "gestationalSize": "Tamaño gestacional",
   "gravidez": "Gravidez",
-  "growthChart": "Growth Chart",
-  "growthCondition": "Growth Condition",
+  "growthChart": "Gráfica de crecimiento",
+  "growthCondition": "Estado de crecimiento",
   "headCircumference": "Perímetro cefálico",
   "heartRate": "Frecuencia cardíaca",
   "height": "Altura",
@@ -244,7 +244,7 @@
   "htsResult": "Resultado de la prueba de HTS",
   "htsScreening": "Tamizaje de VIH (HTS)",
   "htsTestType": "Tipo de prueba de detección de VIH",
-  "illnessDuration": "Duration of Illness",
+  "illnessDuration": "Duración de la enfermedad",
   "imc": "IMC - Índice de Masa Corporal",
   "immediateAssessment": "Valoración inmediata del recién nacido",
   "immediateAttention": "Atención Inmediata",
@@ -258,7 +258,7 @@
   "inPatientSummary": "Resumen del paciente",
   "involucionUterina": "Involución Uterina",
   "ipvOutcome": "Resultado de evaluación IPV",
-  "ipvQuestions": "IPV Questions",
+  "ipvQuestions": "Preguntas sobre violencia de pareja íntima",
   "itemsPerPage": "Elementos por página",
   "kidHistory": "Antecedentes patológicos",
   "labourAndDelivery": "Parto y Puerperio",
@@ -269,7 +269,7 @@
   "legend": "Leyenda",
   "legendItems": "Elementos de la leyenda",
   "lenguaje": "Lenguaje",
-  "lethargy": "Lethargy or coma",
+  "lethargy": "Letargo o coma",
   "limbs": "Extremidades",
   "limbsOther": "Otras observaciones sobre extremidades",
   "limite": "Límite",
@@ -283,8 +283,8 @@
   "loadingPatient": "Cargando paciente ...",
   "location": "Ubicación",
   "male": "Masculino",
-  "malnutrition": "Severe visible malnutrition",
-  "manager": "Case Manager",
+  "malnutrition": "Desnutrición severa visible",
+  "manager": "Manejo de casos",
   "manageVaccinationSchedule": "Administrar calendario de vacunación",
   "maternaHistory": "Antecedente de Historia Materna",
   "maternalCondition": "Condición materna",
@@ -320,12 +320,12 @@
   "newbornVitals": "Signos Vitales del Recién Nacido",
   "newCredEncounter": "Nuevo control CRED",
   "next": "Siguiente",
-  "nextAppointment": "Next Appointment",
+  "nextAppointment": "Próxima cita",
   "nextMonth": "Siguiente mes",
   "nipples": "Pezones",
   "no": "No",
-  "noBreastfeeding": "Does not want to breastfeed or suck",
-  "noChartDataAvailable": "No chart data available",
+  "noBreastfeeding": "No quiere amamantar o succionar",
+  "noChartDataAvailable": "No hay datos disponibles",
   "noConditionsToDisplay": "No hay condiciones para mostrar.",
   "noContactToDisplay": "No hay datos de contacto disponibles para este paciente.",
   "noCurrentAppointments": "No hay citas programadas para hoy para este paciente.",
@@ -343,18 +343,18 @@
   "normalBajo": "Normal Bajo",
   "nose": "Nariz",
   "noseOther": "Otras observaciones sobre la nariz",
-  "nosologicalDiagnosis": "Nosological or Syndromic Diagnosis",
+  "nosologicalDiagnosis": "Diagnóstico nosológico o sindrómico",
   "notApplicable": "No aplica",
   "notes": "Notas",
   "noUpcomingAppointments": "No se encontraron citas próximas",
   "noUpcomingAppointmentsForPatient": "No hay citas próximas registradas para este paciente.",
   "Nueva Atención Postnatal": "Nueva atención postnatal",
   "nursingDiagnosis": "Diagnóstico de enfermería",
-  "nutritionalStatus": "Nutritional Status",
+  "nutritionalStatus": "Estado nutricional",
   "observacion": "Observación",
   "observation": "Observación",
   "observationGroup": "Grupo de Observación",
-  "observations": "Observations",
+  "observations": "Observaciones",
   "observationsPlaceholder": "Observaciones adicionales sobre la evaluación...",
   "obstetricFormula": "Fórmula Obstétrica",
   "occurrenceDate": "Fecha de ocurrencia del evento",
@@ -367,10 +367,10 @@
   "oxygenSaturation": "Saturación de oxígeno",
   "oxygenSupport": "Soporte respiratorio con oxígeno",
   "pageNumber": "Número de página",
-  "paginationPageText_one": "of {{count}} pages",
-  "paginationPageText_many": "of {{count}} pages",
-  "paginationPageText_other": "of {{count}} pages",
-  "paleness": "Severe palmar paleness",
+  "paginationPageText_one": "de {{count}} páginas",
+  "paginationPageText_many": "de {{count}} páginas",
+  "paginationPageText_other": "de {{count}} páginas",
+  "paleness": "Palidez palmar severa",
   "partoAborto": "Abortos",
   "partoAlTermino": "Partos a término",
   "partograph": "Partograma",
@@ -383,17 +383,17 @@
   "patientFamilyTable": "Tabla de contactos familiares",
   "patientInfo": "Información del Paciente",
   "pending": "Pendiente",
-  "perinatalDataRecorded": "Perinatal Data Recorded",
-  "perinatalDataSaveError": "Error saving perinatal data",
+  "perinatalDataRecorded": "Datos perinatales registrados",
+  "perinatalDataSaveError": "Error al guardar datos perinatales",
   "perinatalRecord": "Registro Perinatal",
-  "perinatalRegister": "Perinatal Maternal Carnet",
+  "perinatalRegister": "Carnet Materno Perinatal",
   "pesoCorporal": "Peso corporal (kg)",
   "pesoMadre": "Peso madre (kg)",
-  "physicalAssault": "1. Has he/she ever hit, kicked, slapped, or otherwise physically hurt you?",
-  "physicalExam": "Physical Examination",
+  "physicalAssault": "1. ¿Alguna vez te ha golpeado, pateado, abofeteado o lastimado físicamente de alguna manera?",
+  "physicalExam": "Examen físico",
   "PielYMucosas": "Piel y mucosas",
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Plan de parto (Control/VisitA/No SE Hizo/Na)",
-  "pleaseFillField": "Please complete the required fields",
+  "pleaseFillField": "Por favor complete los campos requeridos",
   "pnsAproach": "Enfoque de notificación de parejas (PNS)",
   "populationType": "Tipo de población",
   "posición": "Posición (O/I/Na)",
@@ -402,7 +402,7 @@
   "postnatalControls": "Control del Puerperio",
   "postOperativeComplications": "Complicaciones postoperatorias",
   "postOperativeDiagnosis": "Diagnóstico postoperatorio",
-  "preferedPNSAproach": "Prefered PNS Aproach",
+  "preferedPNSAproach": "Enfoque PNS preferido",
   "pregnancies": "Embarazos",
   "prematureBirths": "Prematuros",
   "prenatalAntecedents": "Antecedentes prenatales",
@@ -418,7 +418,7 @@
   "primaryLanguage": "Idioma Primario",
   "priorityOfAdmission": "Prioridad de admisión",
   "proximaCita": "Próxima Cita",
-  "psychomotorDevelopment": "Psychomotor Development",
+  "psychomotorDevelopment": "Desarrollo psicomotor",
   "puerperioInmediato": "Puerperio Inmediato",
   "quechua": "Quechua",
   "reactionDescription": "Descripción de la reacción",
@@ -428,17 +428,17 @@
   "recordAnthropometrics": "Registrar Datos Antropométricos",
   "recordFluidBalance": "Registrar Balance de Líquidos",
   "recordLabourDetails": "Registrar detalles del trabajo de parto",
-  "referral": "Referral",
+  "referral": "Referencia",
   "referrals": "Referencias",
   "refreshing": "Refrescando...",
   "registerReaction": "Registrar reacción",
   "relation": "Relación",
-  "relationship": "Relationship",
+  "relationship": "Relación",
   "relationshipConfirmationText": "Esto terminará con la relación.¿Estás seguro de que quieres continuar?",
   "relationshipError": "Error de relación",
   "relationshipErrorMessage": "Solicitud fallida",
-  "relationshipType": "Relationship Type",
-  "relationToPatient": "Relation to patient",
+  "relationshipType": "Tipo de relación",
+  "relationToPatient": "Relación con el paciente",
   "required": "Requerido",
   "respiratoryRate": "Tasa respiratoria (RPM)",
   "responses": "Respuestas",
@@ -446,21 +446,21 @@
   "resumenPartoPuerperio": "Resumen de Parto y Puerperio",
   "retraso": "Retraso",
   "riesgo": "En riesgo",
-  "riskFactors": "Risk Factors",
-  "RlshipError": "Request Failed.......",
+  "riskFactors": "Factores de riesgo",
+  "RlshipError": "Solicitud fallida",
   "rural": "Rural/Andino",
   "save": "Guardar",
   "saveAndClose": "Guardar y Cerrar",
   "savedRelationship": "Relación guardada con éxito",
-  "savedRlship": "Relationship saved successfully",
-  "saveError": "Error saving consultation",
-  "saveRlship": "Save Relationship",
+  "savedRlship": "Relación guardada exitosamente",
+  "saveError": "Error al guardar consulta",
+  "saveRlship": "Guardar relación",
   "saving": "Guardando...",
   "scheduled": "Programado",
   "searchConditions": "Condiciones de búsqueda",
   "searching": "Buscando...",
   "seeAll": "Ver Todo",
-  "seizures": "Seizures",
+  "seizures": "Convulsiones",
   "selectSeverity": "Seleccione la severidad",
   "selectVaccine": "Seleccione vacuna",
   "service": "Servicio",
@@ -468,7 +468,7 @@
   "severity": "Severidad",
   "severityRequired": "Debe seleccionar la severidad",
   "sex": "Sexo",
-  "sexualAssault": "3.Has he/she ever forced you to do something sexually that made you feel uncomfortable?",
+  "sexualAssault": "3. ¿Alguna vez te ha obligado a hacer algo sexual que te hizo sentir incómoda?",
   "show": "Mostrar",
   "SignosYsíntomasPrincipales": "Signos y síntomas principales",
   "situación": "Situación (L, T, Na)",
@@ -480,13 +480,13 @@
   "spanish": "Español",
   "spinalColumn": "Columna vertebral",
   "spinalColumnOther": "Otras observaciones sobre columna vertebral",
-  "startDate": "Start Date",
+  "startDate": "Fecha de inicio",
   "status": "Estado",
   "statusAtDischarge": "Estado al alta",
   "stillBirths": "Nacidos muertos",
-  "stoolCount": "Stool Count",
-  "stoolGrams": "Stool Weight (g)",
-  "submit": "Save and Close",
+  "stoolCount": "Número de deposiciones",
+  "stoolGrams": "Peso de deposiciones (g)",
+  "submit": "Guardar y cerrar",
   "successfullyDeleted": "Eliminado con éxito",
   "suction": "Succión",
   "summaryOfLaborAndPostpartum": "Resumen del Parto y Puerperio",
@@ -500,9 +500,9 @@
   "Talla": "Talla (cm)",
   "tbScreening": "Resultado de detección de TB",
   "temperature": "Temperatura (°C)",
-  "tepsiDataAvailable": "The evaluation is now available in the patient record",
-  "tepsiSaved": "TEPSI Evaluation Saved",
-  "tepsiSaveError": "There was an error saving the TEPSI evaluation",
+  "tepsiDataAvailable": "La evaluación está ahora disponible en el registro del paciente",
+  "tepsiSaved": "Evaluación TEPSI guardada",
+  "tepsiSaveError": "Hubo un error al guardar la evaluación TEPSI",
   "tepsiSubtitle": "Evaluación del desarrollo psicomotor en niños de 2 a 5 años",
   "tepsiTitle": "Test de Desarrollo Psicomotor (TEPSI)",
   "termBirths": "A término",
@@ -519,15 +519,15 @@
   "testStrategy": "Estrategia de prueba",
   "therapiesPrescribed": "Terapias prescritas",
   "thorax": "Tórax",
-  "threatened": "2. Has he/she ever threatened to hurt you?",
+  "threatened": "2. ¿Alguna vez te ha amenazado con lastimarte?",
   "time": "Tiempo",
   "timeRecorded": "Hora registrada",
   "today": "Hoy",
   "total": "Resultado General",
   "tracingNumber": "N.º de rastreo",
   "tracingType": "Tipo de rastreo",
-  "trauma": "Trauma / Burns",
-  "treatment": "Treatment",
+  "trauma": "Trauma / Quemaduras",
+  "treatment": "Tratamiento",
   "type": "Tipo",
   "typeOfSurgery": "Tipo de cirugía",
   "umbilicalCord": "Cordón umbilical",
@@ -539,8 +539,8 @@
   "updateVaccinations": "Actualizar vacunaciones",
   "urban": "Urbano",
   "urbanMarginal": "Urbano Marginal",
-  "urineCount": "Urine Count",
-  "urineGrams": "Urine Volume (g/mL)",
+  "urineCount": "Número de micciones",
+  "urineGrams": "Volumen de orina (g/mL)",
   "uterineHeight": "Altura uterina (cm)",
   "vaccinationSchedule": "Calendario de vacunación",
   "vaccinationScheduleBuilder": "Gestor del calendario de vacunación",
@@ -555,9 +555,9 @@
   "visitDate": "Fecha de visita",
   "vitalSigns": "Signos Vitales",
   "vitaminKAdmin": "Administración de vitamina K",
-  "vomitCount": "Vomit Count",
-  "vomitGramsML": "Vomit Volume (g/mL)",
-  "vomiting": "Vomits everything",
+  "vomitCount": "Número de vómitos",
+  "vomitGramsML": "Volumen de vómitos (g/mL)",
+  "vomiting": "Vomita todo",
   "weight": "Peso",
   "wellChildCare": "Control de Niño Sano",
   "wellChildControls": "Controles de Niño Sano",
