--- a/translations/en.json
+++ b/translations/en.json
@@ -41,8 +41,10 @@
   "anthropometricsNowAvailable": "Ahora visibles en la página de Datos Antropométricos",
   "anthropometricsRecorded": "Datos Antropométricos registrados",
   "anthropometricsSaveError": "Error guardando los datos antropométricos",
+  "apgar1": "APGAR 1 minuto",
   "apgar10Min": "Apgar 10 Minutos",
   "apgar1Min": "Apgar 1 Minuto",
+  "apgar5": "APGAR 5 minutos",
   "apgar5Min": "Apgar 5 Minutos",
   "appointmentCheckedIn": "Appointment Checked In",
   "appointmentMarkedChecked": "Appointment marked as Checked In",
@@ -58,10 +60,13 @@
   "baselineStatus": "HIV Status",
   "bilingual": "Bilingüe (Español/Quechua)",
   "biometrics_lower": "biometrics",
+  "birthData": "Datos del Nacimiento",
+  "birthHeight": "Talla al Nacer",
   "birthInjuriesTrauma": "Birth Injuries/Trauma",
   "birthQuestionnaire": "Cuestionario Inmediato para Nacimiento",
   "births": "Partos",
   "birthTypes": "Tipos de Parto",
+  "birthWeight": "Peso al Nacer",
   "bloodGroup": "Blood Group",
   "bloodLoss": "Blood Transfusion Done",
   "bloodPressure": "Blood Pressure (mmHg)",
@@ -69,6 +74,7 @@
   "bodyPosition": "Posición del Cuerpo",
   "bodyTemperature": "Temperatura Corporal",
   "breastfeedingCounseling": "Consejeria de Lactancia Materna",
+  "breastfeedingFirstHour": "Lactancia Primera Hora",
   "cancel": "Cancel",
   "cannotDrink": "Cannot drink or breastfeed",
   "caracteristicaLoquios": "Característica de Loquios",
@@ -95,6 +101,7 @@
   "clinicalStatus": "Clinical status",
   "clinicalStatusRequired": "A clinical status is required",
   "clinicalViews": "Clinical views",
+  "cm": "cm",
   "completed": "Administrado",
   "condition": "Condition",
   "conditionNowVisible": "It is now visible on the Conditions page",
@@ -102,6 +109,7 @@
   "conditions": "Conditions",
   "conditionSaved": "Condition saved",
   "conditionUpdated": "Condition updated",
+  "congenitalDisease": "Enfermedad Congénita",
   "consultationDate": "Consultation Date",
   "consultationDetails": "Consultation Details",
   "consultationReason": "Reason for Consultation",
@@ -136,6 +144,7 @@
   "dateOfOnset": "Date of onset",
   "dateOfSurgery": "Date of Surgery",
   "dateRequired": "Debe seleccionar la fecha de ocurrencia",
+  "days": "días",
   "dead": "Dead",
   "defaulterTracing": "Defaulter tracing",
   "delete": "Delete",
@@ -229,6 +238,7 @@
   "genitourinaryElimination": "Genitourinary",
   "genitourinaryEliminationOther": "Other (Elimination)",
   "gestationalAge": "Gestational Age (weeks)",
+  "gestationalAgeAtBorn": "Edad Gestacional al Nacer",
   "gestationalSize": "Gestational Size",
   "gravidez": "Pregnancy",
   "growthChart": "Growth Chart",
@@ -239,6 +249,7 @@
   "heridaOperatoria": "Herida Operatoria",
   "hip": "Cadera",
   "hivStatus": "HIV Status",
+  "hospitalizationTime": "Tiempo de Hospitalización",
   "htsClinicalView": "HTS Clinical View",
   "htsInitial": "HTS Initial Test",
   "htsResult": "Final result",
@@ -260,6 +271,7 @@
   "ipvOutcome": "IPV Outcome",
   "ipvQuestions": "IPV Questions",
   "itemsPerPage": "Items per page",
+  "kg": "kg",
   "kidHistory": "Antecedentes Patologicos",
   "labourAndDelivery": "Parto y Puerperio",
   "labourAndDeliveryTabs": "Pestañas de Parto y Puerperio",
@@ -394,6 +406,7 @@
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Birth Plan (Check-up/Visit/Not done/N/A)",
   "pleaseFillField": "Please complete the required fields",
   "pnsAproach": "PNS Aproach",
+  "points": "puntos",
   "populationType": "Population type",
   "posición": "Position (O/I/NA)",
   "postnatalCare": "Control Postnatal",
@@ -439,6 +452,7 @@
   "relationshipType": "Relationship Type",
   "relationToPatient": "Relation to patient",
   "required": "Required",
+  "requiredHospitalization": "Requirió Hospitalización",
   "respiratoryRate": "Respiratory Rate (rpm)",
   "responses": "Respuestas",
   "resultsPreview": "Vista previa de resultados (Ajustados culturalmente)",
@@ -447,6 +461,7 @@
   "riesgo": "En riesgo",
   "riskFactors": "Risk Factors",
   "RlshipError": "Request Failed.......",
+  "roomingIn": "Alojamiento Conjunto",
   "rural": "Rural/Andino",
   "save": "Save",
   "saveAndClose": "Guardar y Cerrar",
@@ -557,7 +572,9 @@
   "vomitCount": "Vomit Count",
   "vomitGramsML": "Vomit Volume (g/mL)",
   "vomiting": "Vomits everything",
+  "weeks": "semanas",
   "weight": "Weight (kg)",
+  "weightForGestationalAge": "Peso para Edad Gestacional",
   "wellChildCare": "Control de Niño Sano",
   "wellChildControls": "Well Child Controls",
   "yes": "Yes"
