--- a/translations/es.json
+++ b/translations/es.json
@@ -41,8 +41,10 @@
   "anthropometricsNowAvailable": "Ahora visibles en la página de Datos Antropométricos",
   "anthropometricsRecorded": "Datos Antropométricos registrados",
   "anthropometricsSaveError": "Error guardando los datos antropométricos",
+  "apgar1": "APGAR 1 minuto",
   "apgar10Min": "Apgar al minuto 10",
   "apgar1Min": "Apgar al minuto 1",
+  "apgar5": "APGAR 5 minutos",
   "apgar5Min": "Apgar al minuto 5",
   "appointmentCheckedIn": "Cita registrada",
   "appointmentMarkedChecked": "Cita marcada como registrada",
@@ -58,10 +60,13 @@
   "baselineStatus": "Estado basal del VIH",
   "bilingual": "Bilingüe (Español/Quechua)",
   "biometrics_lower": "Biometría",
+  "birthData": "Datos del Nacimiento",
+  "birthHeight": "Talla al Nacer",
   "birthInjuriesTrauma": "Lesiones o traumas al nacer",
   "birthQuestionnaire": "Cuestionario Inmediato para Nacimiento",
   "births": "Partos",
   "birthTypes": "Tipos de Parto",
+  "birthWeight": "Peso al Nacer",
   "bloodGroup": "Grupo sanguíneo",
   "bloodLoss": "Pérdida de sangre",
   "bloodPressure": "Presión arterial (mmHg)",
@@ -69,6 +74,7 @@
   "bodyPosition": "Posición corporal",
   "bodyTemperature": "Temperatura corporal",
   "breastfeedingCounseling": "Consejeria de Lactancia Materna",
+  "breastfeedingFirstHour": "Lactancia Primera Hora",
   "cancel": "Cancelar",
   "cannotDrink": "No puede beber o amamantar",
   "caracteristicaLoquios": "Característica de Loquios",
@@ -95,6 +101,7 @@
   "clinicalStatus": "Estado clínico",
   "clinicalStatusRequired": "Se requiere un estado clínico",
   "clinicalViews": "Vistas clínicas",
+  "cm": "cm",
   "completed": "Completado",
   "condition": "Condición",
   "conditionNowVisible": "Ahora es visible en la página de condiciones",
@@ -102,6 +109,7 @@
   "conditions": "Condiciones",
   "conditionSaved": "Condición guardada",
   "conditionUpdated": "Condición actualizada",
+  "congenitalDisease": "Enfermedad Congénita",
   "consultationDate": "Fecha de consulta",
   "consultationDetails": "Detalles de la consulta",
   "consultationReason": "Motivo de consulta",
@@ -136,6 +144,7 @@
   "dateOfOnset": "Fecha de inicio",
   "dateOfSurgery": "Fecha de cirugía",
   "dateRequired": "Se requiere una fecha",
+  "days": "días",
   "dead": "Muerto",
   "defaulterTracing": "Seguimiento de pacientes incumplidos",
   "delete": "Borrar",
@@ -229,6 +238,7 @@
   "genitourinaryElimination": "Eliminación genitourinaria",
   "genitourinaryEliminationOther": "Otras observaciones sobre la eliminación genitourinaria",
   "gestationalAge": "Edad gestacional (semanas)",
+  "gestationalAgeAtBorn": "Edad Gestacional al Nacer",
   "gestationalSize": "Tamaño gestacional",
   "gravidez": "Gravidez",
   "growthChart": "Gráfica de crecimiento",
@@ -239,6 +249,7 @@
   "heridaOperatoria": "Herida Operatoria",
   "hip": "Cadera",
   "hivStatus": "Estado del VIH",
+  "hospitalizationTime": "Tiempo de Hospitalización",
   "htsClinicalView": "Vista clínica de HTS",
   "htsInitial": "Prueba inicial de detección del VIH",
   "htsResult": "Resultado de la prueba de HTS",
@@ -260,6 +271,7 @@
   "ipvOutcome": "Resultado de evaluación IPV",
   "ipvQuestions": "Preguntas sobre violencia de pareja íntima",
   "itemsPerPage": "Elementos por página",
+  "kg": "kg",
   "kidHistory": "Antecedentes patológicos",
   "labourAndDelivery": "Parto y Puerperio",
   "labourAndDeliveryTabs": "Pestañas de Parto y Puerperio",
@@ -395,6 +407,7 @@
   "Plan de Parto (Control/Visita/No se hizo/NA)": "Plan de parto (Control/VisitA/No SE Hizo/Na)",
   "pleaseFillField": "Por favor complete los campos requeridos",
   "pnsAproach": "Enfoque de notificación de parejas (PNS)",
+  "points": "puntos",
   "populationType": "Tipo de población",
   "posición": "Posición (O/I/Na)",
   "postnatalCare": "Control Postnatal",
@@ -440,6 +453,7 @@
   "relationshipType": "Tipo de relación",
   "relationToPatient": "Relación con el paciente",
   "required": "Requerido",
+  "requiredHospitalization": "Requirió Hospitalización",
   "respiratoryRate": "Tasa respiratoria (RPM)",
   "responses": "Respuestas",
   "resultsPreview": "Vista previa de resultados (Ajustados culturalmente)",
@@ -448,6 +462,7 @@
   "riesgo": "En riesgo",
   "riskFactors": "Factores de riesgo",
   "RlshipError": "Solicitud fallida",
+  "roomingIn": "Alojamiento Conjunto",
   "rural": "Rural/Andino",
   "save": "Guardar",
   "saveAndClose": "Guardar y Cerrar",
@@ -558,7 +573,9 @@
   "vomitCount": "Número de vómitos",
   "vomitGramsML": "Volumen de vómitos (g/mL)",
   "vomiting": "Vomita todo",
+  "weeks": "semanas",
   "weight": "Peso",
+  "weightForGestationalAge": "Peso para Edad Gestacional",
   "wellChildCare": "Control de Niño Sano",
   "wellChildControls": "Controles de Niño Sano",
   "yes": "Sí"
