--- a/translations/es.json
+++ b/translations/es.json
@@ -241,7 +241,7 @@
   "gestationalAgeAtBorn": "Edad Gestacional al Nacer",
   "gestationalSize": "Tamaño gestacional",
   "gravidez": "Gravidez",
-  "growthChart": "Evaluación Nutricional y del Desarrollo",
+  "growthChart": "Evaluación del Crecimiento y Desarrollo",
   "growthCondition": "Estado de crecimiento",
   "headCircumference": "Perímetro cefálico",
   "heartRate": "Frecuencia cardíaca",
